--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:3306/test1?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/scrapDB?serverTimezone=UTC
 spring.datasource.username=javatest
 spring.datasource.password=javatest
 spring.mvc.view.prefix=/WEB-INF/views/
