--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,31 @@
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:3306/scrapDB?serverTimezone=UTC
-spring.datasource.username=javatest
-spring.datasource.password=javatest
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+# ==============================================================
+# = Data Source
+# ==============================================================
+spring.datasource.url = jdbc:mysql://localhost:3306/scrapDB?serverTimezone=UTC&useSSL=true
+spring.datasource.username = javatest
+spring.datasource.password = javatest
+# ==============================================================
+# = Keep the connection alive if idle for a long time (needed in production)
+# ==============================================================
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+# ==============================================================
+# = Show or not log for each sql query
+# ==============================================================
+#spring.jpa.show-sql = true
+# ==============================================================
+# = Hibernate ddl auto (create, create-drop, update)
+# ==============================================================
+spring.jpa.hibernate.ddl-auto = update
+# ==============================================================
+# = The SQL dialect makes Hibernate generate better SQL for the chosen database
+# ==============================================================
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+# ==============================================================
+# = Initialize the database using data.sql script
+# ==============================================================
+spring.datasource.initialization-mode=always
+#logging.level.org.springframework.security=DEBUG
